# dfhack

./: .travis.yml  CMakeLists.txt
.github/workflows/: build-windows.yml  build.yml
depends/lua/include/: luaconf.h
docs/: Compile.rst
plugins/: CMakeLists.txt  automaterial.cpp
plugins/devel/: CMakeLists.txt  python-test.cpp
plugins/python/: CMakeLists.txt  python.cpp
plugins/python/hack/: df.py  dfhack.py
plugins/python/hack/dfhack/: __init__.py
plugins/ruby/: ruby.cpp  ruby.rb
plugins/tweak/: tweak.cpp
plugins/tweak/tweaks/: trap-wear.h
test/: main.lua
travis/: download-df.sh  run-tests.py
